# rfid-application-a53cay

./: .editorconfig  .gitignore  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/ansible/inventory/: dev.yml  prod.yml
infrastructure/ansible/playbooks/: configure-readers.yml  setup-monitoring.yml
infrastructure/monitoring/grafana/dashboards/: asset-tracking.json  reader-metrics.json  system-metrics.json
infrastructure/monitoring/jaeger/: jaeger.yml
infrastructure/monitoring/prometheus/: prometheus.yml
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
src/backend/: .dockerignore  .env.example  README.md  docker-compose.yml  package.json  tsconfig.json
src/backend/api-gateway/: Dockerfile  package.json  tsconfig.json
src/backend/api-gateway/src/: app.ts
src/backend/asset-service/: Dockerfile  pom.xml
src/backend/helm/: Chart.yaml  values.yaml
src/backend/proto/: asset.proto  reader.proto  visualization.proto
src/backend/reader-service/: Dockerfile  pyproject.toml  requirements.txt
src/backend/reader-service/src/: __init__.py  app.py  config.py
src/backend/reader-service/src/controllers/: reader_controller.py
src/backend/reader-service/src/models/: read.py  reader.py
src/backend/reader-service/src/services/: llrp_service.py  read_processor.py
src/backend/reader-service/src/utils/: deduplication.py  filtering.py
src/backend/reader-service/tests/: conftest.py  test_llrp_service.py  test_read_processor.py
src/backend/visualization-service/: Dockerfile  package.json  tsconfig.json
src/web/: .eslintrc.ts  README.md  index.html  jest.config.ts  package.json  tsconfig.json  vite.config.ts
src/web/public/: manifest.json  robots.txt
src/web/src/: App.tsx  index.tsx  vite-env.d.ts
(+198 files in other folders)
